# rfm

./: .gitignore  Cargo.toml  README.md  changelog.md  create-default-config.sh  exceptions.md  features.md  flake.nix
.github/workflows/: build.yml
examples/: colors.toml  config.toml  keys.toml  open.toml
src/: color.rs  commands.rs  config.rs  content.rs  engine.rs  logger.rs  main.rs  manager.rs  opener.rs  panel.rs  preview.rs  symbols.rs  util.rs
src/engine/: commands.rs  opener.rs  symbols.rs
src/panel/: console.rs  directory.rs  input.rs  manager.rs  mod.rs  preview.rs
