[package]
name = "rfm"
version = "0.2.5"
edition = "2021"
authors = ["Christian Hammermeister <christian.hammermeister@protonmail.com>"]
description = "A super fast file-manager written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cached = "0.42.0"
clap = {version = "4.5.0", features = ["derive"]}
crossterm = { version = "0.26.1", features = ["event-stream"] }
fs_extra = "1.3.0"
futures = "0.3.30"
futures-timer = "3.0.2"
image = "0.24.8"
log = { version ="0.4.20", features = ["std"] }
mime = "0.3.17"
mime_guess = "2.0.4"
notify = {version = "5.2.0", default-features = false, features = ["macos_fsevent"]}
notify-rust = "4.10.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
patricia_tree = "0.6"
rand = "0.8.5"
serde = {version = "1.0.196", features = ["serde_derive"]}
tempfile = "3.10.0"
thiserror = "1.0.56"
time = {version = "0.3.34", features = ["formatting"]}
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.7.8"
unix_mode = "0.1.4"
users = "0.11.0"
walkdir = "2.4.0"
whoami = "1.4.1"
