[package]
name = "rfm-bin" # someone else already registered rfm as a crate-name :S
version = "0.2.9"
edition = "2021"
authors = ["Christian Hammermeister <christian.hammermeister@protonmail.com>"]
description = "A super fast file-manager written in rust"
repository = "https://github.com/dsxmachina/rfm"
keywords = ["filemanager", "ranger", "vifm", "terminal"]
categories = ["command-line-utilities", "filesystem"]
license = "GPL-3.0"

[[bin]]
name = "rfm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cached = "0.42.0"
clap = {version = "4.5.20", features = ["derive"]}
crossterm = { version = "0.26.1", features = ["event-stream"] }
fs_extra = "1.3.0"
futures = "0.3.31"
image = "0.24.9"
log = { version ="0.4.22", features = ["std"] }
mime = "0.3.17"
mime_guess = "2.0.5"
notify = {version = "5.2.0", default-features = false, features = ["macos_fsevent"]}
notify-rust = "4.11.3"
once_cell = { version = "1.20.2", features = ["parking_lot"] }
parking_lot = "0.12.3"
patricia_tree = "0.6"
rand = "0.8.5"
serde = {version = "1.0.214", features = ["serde_derive"]}
tempfile = "3.14.0"
time = {version = "0.3.36", features = ["formatting"]}
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.7.8"
unix_mode = "0.1.4"
users = "0.11.0"
walkdir = "2.5.0"
whoami = "1.5.2"
