[package]
name = "rfm-bin" # someone else already registered rfm as a crate-name :S
version = "0.3.1"
edition = "2021"
authors = ["Christian Hammermeister <christian.hammermeister@protonmail.com>"]
description = "A super fast file-manager written in rust"
repository = "https://github.com/dsxmachina/rfm"
keywords = ["filemanager", "ranger", "vifm", "terminal"]
categories = ["command-line-utilities", "filesystem"]
license = "GPL-3.0"

[[bin]]
name = "rfm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.95"
cached = "0.42.0"
clap = {version = "4.5.26", features = ["derive"]}
crossterm = { version = "0.26.1", features = ["event-stream"] }
fs_extra = "1.3.0"
futures = "0.3.31"
image = "0.24.9"
log = { version ="0.4.22", features = ["std"] }
mime = "0.3.17"
mime_guess = "2.0.5"
notify = "8.0.0"
once_cell = { version = "1.20.2", features = ["parking_lot"] }
opener = "0.7.2"
parking_lot = "0.12.3"
patricia_tree = "0.6"
rand = "0.8.5"
rust-embed = "8.5.0"
serde = {version = "1.0.217", features = ["serde_derive"]}
tempfile = "3.15.0"
time = {version = "0.3.37", features = ["formatting"]}
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.7.8"
unicode-display-width = "0.3.0"
unix_mode = "0.1.4"
users = "0.11.0"
walkdir = "2.5.0"
whoami = "1.5.2"

[profile.release]
codegen-units = 1
lto = true
